--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 <p id ="p1"></p>
 <p id ="p2"></p>
 <p id ="p3"></p>
+<h1>Welcome</h1>
+<label>username:</label>
+<input id="myText"><br><br>
+<button id="mySubmit">submit</button>
 
    <script src="index.js"></script> 
 </body>
