--- a/index.html
+++ b/index.html
@@ -8,13 +8,9 @@
 
 </head>
 <body>
-<p id ="p1"></p>
-<p id ="p2"></p>
-<p id ="p3"></p>
-<h1 id="myH1">Welcome</h1>
-<label>username:</label>
-<input id="myText"><br><br>
+<h1 id="myH1">Enter the radius of a circle:</h1>
+<label>radius:</label>
+<input type="text" id="myText"><br><br>
 <button id="mySubmit">submit</button>
-
    <script src="index.js"></script> 
 </body>
