--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 
 </head>
 <body>
-<h1 id="myH1">Enter the radius of a circle:</h1>
-<label>radius:</label>
-<input type="text" id="myText"><br><br>
-<button id="mySubmit">submit</button>
+   <label id="countLbel">0</label><br>
+   <button></button>
+   <button></button>
+   <button></button>
    <script src="index.js"></script> 
 </body>
