--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
    <label id="countLbel">0</label><br>
-   <button></button>
-   <button></button>
-   <button></button>
+   <button id="decreaseBtn">decrease</button>
+   <button id="resetBtn">reset</button>
+   <button id="increaseBtn">increase</button>
    <script src="index.js"></script> 
 </body>
