--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
 </head>
 <body>
    <label id="countLbel">0</label><br>
-   <button id="decreaseBtn">decrease</button>
-   <button id="resetBtn">reset</button>
-   <button id="increaseBtn">increase</button>
+   <div id="btnContainer"> 
+    <button id="decreaseBtn">decrease</button>
+    <button id="resetBtn">reset</button>
+    <button id="increaseBtn">increase</button>
+</div>
+   
    <script src="index.js"></script> 
 </body>
