--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
    <label id="countLbel">0</label><br>
    <div id="btnContainer"> 
-    <button id="decreaseBtn">decrease</button>
-    <button id="resetBtn">reset</button>
-    <button id="increaseBtn">increase</button>
+    <button id="decreaseBtn" class="buttons">decrease</button>
+    <button id="resetBtn" class="buttons">reset</button>
+    <button id="increaseBtn" class="buttons">increase</button>
 </div>
    
    <script src="index.js"></script> 
