--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 </head>
 <body>
-   <label id="countLbel">0</label><br>
+   <label id="countLabel">0</label><br>
    <div id="btnContainer"> 
     <button id="decreaseBtn" class="buttons">decrease</button>
     <button id="resetBtn" class="buttons">reset</button>
