random number generator

--- a/index.html
+++ b/index.html
@@ -8,12 +8,8 @@
 
 </head>
 <body>
-   <label id="countLabel">0</label><br>
-   <div id="btnContainer"> 
-    <button id="decreaseBtn" class="buttons">decrease</button>
-    <button id="resetBtn" class="buttons">reset</button>
-    <button id="increaseBtn" class="buttons">increase</button>
-</div>
+    <button id="myButton">roll</button>
+    <label id="myLabel"></label>
    
    <script src="index.js"></script> 
 </body>
