--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 </head>
 <body>
-    <button id="myButton">roll</button>
+    <button id="myButton">roll</button><br>
     <label id="myLabel"></label>
    
    <script src="index.js"></script> 
