--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <button id="myButton">roll</button><br>
-    <label id="myLabel"></label>
+    <label id="label1" class="myLabels"></label><br>
+    <label id="label2" class="myLabels"></label><br>
+    <label id="label3" class="myLabels"></label><br>
    
    <script src="index.js"></script> 
 </body>
