--- a/index.html
+++ b/index.html
@@ -8,10 +8,8 @@
 
 </head>
 <body>
-    <label>Enter your age</label><br>
-    <input type="text" id="myText"><br>
-    <button type="submit" id="mySubmit">submit</button>
-    <p id="resultElement"></p>
+    <input type="checkbox" id="myCheckbox">
+    <label for="myCheckbox"></label>
    
    <script src="index.js"></script> 
 </body>
