--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <input type="checkbox" id="myCheckbox">
-    <label for="myCheckbox"></label>
+    <label for="myCheckBox">subscribe</label><br>
+    <input type="radio" id="visaBtn">
+    <label for="visaBtn">Visa</label><br>
    
    <script src="index.js"></script> 
 </body>
