--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <label for="myCheckBox">subscribe</label><br>
     <input type="radio" id="visaBtn">
     <label for="visaBtn">Visa</label><br>
+    <input type="radio" id="masterCardBtn">
+    <label for="masterCardBtn">MasterCard</label><br>
+    <input type="radio" id="payPalBtn">
+    <label for="payPalBtn">PayPal</label><br>
    
    <script src="index.js"></script> 
 </body>
