--- a/index.html
+++ b/index.html
@@ -10,12 +10,15 @@
 <body>
     <input type="checkbox" id="myCheckbox">
     <label for="myCheckBox">subscribe</label><br>
-    <input type="radio" id="visaBtn">
+    <input type="radio" id="visaBtn" name="card">
     <label for="visaBtn">Visa</label><br>
-    <input type="radio" id="masterCardBtn">
+    <input type="radio" id="masterCardBtn" name="card">
     <label for="masterCardBtn">MasterCard</label><br>
-    <input type="radio" id="payPalBtn">
+    <input type="radio" id="payPalBtn" name="card">
     <label for="payPalBtn">PayPal</label><br>
+    <button type="submit" id="mySubmir">submit</button>
+    <p id="subResult"></p>
+    <p id="subResult"></p>
    
    <script src="index.js"></script> 
 </body>
