--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <input type="checkbox" id="myCheckbox">
-    <label for="myCheckBox">subscribe</label><br>
+    <label for="myCheckBox">subscribe</label><br><br>
     <input type="radio" id="visaBtn" name="card">
     <label for="visaBtn">Visa</label><br>
     <input type="radio" id="masterCardBtn" name="card">
@@ -18,7 +18,7 @@
     <label for="payPalBtn">PayPal</label><br>
     <button type="submit" id="mySubmir">submit</button>
     <p id="subResult"></p>
-    <p id="subResult"></p>
+    <p id="paymentResult"></p>
    
    <script src="index.js"></script> 
 </body>
