--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <input type="radio" id="masterCardBtn" name="card">
     <label for="masterCardBtn">MasterCard</label><br>
     <input type="radio" id="payPalBtn" name="card">
-    <label for="payPalBtn">PayPal</label><br>
+    <label for="payPalBtn">PayPal</label><br><br>
     <button type="submit" id="mySubmir">submit</button>
     <p id="subResult"></p>
     <p id="paymentResult"></p>
