--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <label for="masterCardBtn">MasterCard</label><br>
     <input type="radio" id="payPalBtn" name="card">
     <label for="payPalBtn">PayPal</label><br><br>
-    <button type="submit" id="mySubmir">submit</button>
+    <button type="submit" id="mySubmit">submit</button>
     <p id="subResult"></p>
     <p id="paymentResult"></p>
    
